# GraphQL-Anomaly-Detection

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  struct.txt
docs/: PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  ROADMAP.md  commands.txt
src/: __init__.py
src/data_pipeline/generators/: generate_data.txt  generate_malicious.py  generate_normal.py  generate_sequences.py
src/data_pipeline/preprocessing/: __init__.py  build_train_data.py  feature_consolidator.py  split_features.py  split_train_val_test.py
src/data_pipeline/schemas/: introspect.js  schema_generic_1.graphql  schema_generic_2.graphql  schema_generic_3.graphql
src/data_pipeline/schemas/introspected/: schema_g1.json  schema_g2.json  schema_g3.json
src/data_pipeline/validators/: validate_generated.py
src/ingestion/parser/: cost_calc.js
src/ml/export/: export_onnx.py  export_torchscript.py
src/ml/models/: ensemble_head.py  feature_schema.py  lstm_detector.py  transformer_detector.py
src/ml/serving/: http_server.py  predictor.py
src/ml/training/: dataloader.py  feature_datasets.py  metrics.py  text_datasets.py  train.py  train_bilstm.py  train_ensemble.py  train_features.py
tests/: ast_estractor.test.js  cost_calc.test.js  depth_calc.test.js  test_feature_extractor.py  test_validation.py
